--- a/WebApplicationDemo/Views/Home/Crear.cshtml
+++ b/WebApplicationDemo/Views/Home/Crear.cshtml
@@ -2,6 +2,8 @@
 
 <h2>Crear nueva tarea</h2>
 
+@* Razor syntax para vincular datos entre el modelo (definido en C#) y la vista (HTML). *@
+
 @* Envia al metodo crear *@
 <form asp-action="Crear">
     <div class="form-group">
@@ -25,12 +27,19 @@
         <input type="radio" value="false" name="EstaCompleta" />No<br /> *@
         <span asp-validation-for="EstaCompleta" class="text-danger"></span>
     </div>
-    <div class="form-group"> 
-        <input type="submit" value="Guardar" class="btn btn-primary" />
+    <div class="form-group">
+        <label asp-for="Prioridad" class="control-label"></label>
+        <select asp-for="Prioridad" class="form-control" asp-items="@(new SelectList(new[] { "Alta", "Media", "Baja" }))">
+            <option value="">Seleccione una prioridad</option> <!-- Opción por defecto -->
+        </select>
+        <span asp-validation-for="Prioridad" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="Explicacion" class="control-label"></label>
         <input asp-for="Explicacion" class="form-control" />
+    </div>
+    <div class="form-group">
+        <input type="submit" value="Guardar" class="btn btn-primary" />
     </div>
 </form>
 
