--- a/WebApplicationDemo/wwwroot/css/site.css
+++ b/WebApplicationDemo/wwwroot/css/site.css
@@ -19,4 +19,21 @@ html {
 
 body {
   margin-bottom: 60px;
+  font-family: 'Ko-Ho';
+}
+
+h1, h2{
+    font-family: 'Gabriela';
+    font-weight: 600;
+    text-transform:uppercase;
+}
+
+a{
+    color: black;
+}
+
+/*LOGO*/
+.logo-container img{
+    width: 40px;
+    height: auto;
 }
