--- a/WebApplicationDemo/Views/Shared/_Layout.cshtml
+++ b/WebApplicationDemo/Views/Shared/_Layout.cshtml
@@ -10,14 +10,17 @@
     <link rel="stylesheet" href="@Url.Content("~/WebApplicationDemo.styles.css")" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gabriela&family=KoHo:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Gabriela&family=KoHo:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="icon" href="~/images/logo.png" type="image/x-icon" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <div class="logo-container">
-                    <img src="../images/logo.png" />
+                    <img src="@Url.Content("~/images/logo.png")" />
                 </div>
                 
                 @* <a class="navbar-brand" href="@Url.Action("Index", "Home")">WebApplicationDemo</a>
@@ -53,7 +56,7 @@
     <script src="@Url.Content("~/lib/bootstrap/dist/js/bootstrap.bundle.min.js")"></script>
     <script src="@Url.Content("~/js/site.js")"></script>
     <script src="~/js/main.min.js"></script>
-
     @await RenderSectionAsync("Scripts", required: false)
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
